--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-camelot-py ==0.8.2
-transformers==2.9.0
-torchvision==0.8.1
-google_trans_new==1.1.9
-nltk==3.5
-spacy==2.2.1
-mdutils==1.3.0 
+numpy=1.19.5
+pandas=1.1.5
+sklearn=0.22.2
